bug fixed on ios?

--- a/css/styles.css
+++ b/css/styles.css
@@ -1950,7 +1950,7 @@ input {
     display: none;
   }
 
-  .main-header__svg {
+  .main-header__logo {
     transform: scale(50%);
   }
 
